# devops-assesment

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  tox.ini
.github/workflows/: deploy_aws.yaml  pull_request.yaml  task-definition.json
