[tool.poetry]
name = "devops-assesment"
version = "0.1.0"
description = ""
authors = ["Erik Berdonces Bonelo <sturgelose@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
